name:                pure-queue
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-queue
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.9 && < 5

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Queue

  default-language: Haskell2010